unsubscribes added to components

--- a/src/app/app/categories/a-category/a-category.component.html
+++ b/src/app/app/categories/a-category/a-category.component.html
@@ -10,7 +10,7 @@
                            
             </div>
           <h5 class="card-title">{{category.name}}</h5>
-          <p class="card-text">{{category.money | currency}}</p>
+          <p class="card-text">{{category.money | currency:'RUB':"symbol-narrow"}}</p>
           <div class="container">
               <div class="row">
                 <div class="col-8">
