changing color scheme

--- a/src/app/app/budgets/a-budget/a-budget.component.css
+++ b/src/app/app/budgets/a-budget/a-budget.component.css
@@ -20,7 +20,7 @@ input {
 }
 
 .card {
-    background-color: rgba(91,192,222,0.25);
+    background: linear-gradient(45deg, rgb(111, 133, 199), #C5DDE8);
     margin: 0.7rem;
     border-radius: 20px; 
 }
@@ -40,3 +40,8 @@ input {
     border-radius: 20px; 
     opacity: 0.8;
 }
+
+.buttonHey {
+    background-color: rgb(33, 58, 135);
+    color: white;
+    ; }
