--- a/src/app/app/budgets/balance/balance.component.html
+++ b/src/app/app/budgets/balance/balance.component.html
@@ -1,5 +1,5 @@
 <div class="ml-3 col-12">
-  <h4 *ngIf='euro' class="euro"> Euro: {{euro | currency: 'EUR':"symbol-narrow"}}</h4>
+  <h4 *ngIf='euro' class="euro"> EURO: {{euro | currency: 'EUR':"symbol-narrow"}}</h4>
   <h4 *ngIf='usd' class="usd"> USD: {{usd | currency: 'USD':"symbol-narrow"}}</h4>
   <h4  *ngIf='rub' class="rub"> RUB: {{rub | currency: 'RUB':"symbol-narrow"}}</h4>
 </div>
