--- a/src/app/app/budgets/edit-budget/edit-budget.component.html
+++ b/src/app/app/budgets/edit-budget/edit-budget.component.html
@@ -46,7 +46,7 @@
              </select>
     </div>
     <button type="submit" [disabled]='f.invalid' class="btn btn-success mt-4 mb-3">Сохранить</button>
-    <button (click)='goBack()' type='button' class="btn btn-warning mt-4 mb-3 ml-1">Назад</button>
+    <button (click)='goBack()' type='button' class="btn buttonBack mt-4 mb-3 ml-1">Назад</button>
    </form> 
 
 </div>
