--- a/src/app/app/categories/a-category/a-category.component.html
+++ b/src/app/app/categories/a-category/a-category.component.html
@@ -38,7 +38,7 @@
                           </div>
               </div>              
                 <div class="col-1 mt-2 ">               
-                    <button type='reset' (click)=addSum(selectedCategory.id,inputValue.value,selectedCategory.value) class="btn btn-info ">+</button>  
+                    <button type='reset' (click)=addSum(selectedCategory.id,inputValue.value,selectedCategory.value) class="btn buttonHey ">+</button>  
                  
                 </div>   
                                
