--- a/src/app/app/categories/dashboard-categories/dashboard-categories.component.html
+++ b/src/app/app/categories/dashboard-categories/dashboard-categories.component.html
@@ -1,7 +1,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-12 col-md-8">
-            <h3 class="">Расходы</h3> <hr>
+            <h3 class="">Категории расходов</h3> <hr>
             <app-m-categories [isEdit]=true></app-m-categories>
             <div class="m-3 ">
               <div class="card ma-3 dashed" style="width: 14rem;">  
