--- a/src/app/app/navbar/navbar.component.html
+++ b/src/app/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-  <nav class="navbar navbar-expand-md navbar-dark bg-info mb-4">
+  <nav class="navbar navbar-expand-md navbar-dark  mb-4 hren">
       <div class="container">
         <a routerLink="/" class="navbar-brand">
           Coin Project
