--- a/src/app/app/auth/login/login.component.html
+++ b/src/app/app/auth/login/login.component.html
@@ -14,7 +14,7 @@
             <label for="password">Пароль</label>
             <input type="password" name="password" [(ngModel)]="password" class="form-control" required>
           </div>
-          <input type="submit" value="Войти" class="btn btn-info btn-block">
+          <input type="submit" value="Войти" class="btn hren btn-block">
         </form>
       </div>
     </div>
