--- a/src/app/app/auth/register/register.component.html
+++ b/src/app/app/auth/register/register.component.html
@@ -15,7 +15,7 @@
             <label for="password">Пароль</label>
             <input type="password" name="password" [(ngModel)]="password" class="form-control" pattern="^([a-zA-Z0-9_\-\.]+)@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([a-zA-Z0-9\-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$" required>
           </div>
-          <input type="submit" value="Регистрация" class="btn btn-info btn-block" *ngIf="!isLoading">
+          <input type="submit" value="Регистрация" class="btn hren btn-block" *ngIf="!isLoading">
         </form>
         <div class="text-center pb-4 pt-3">
             <div class="spinner-border text-info text-center" role="status" *ngIf="isLoading">
