--- a/src/app/app/categories/a-category/a-category.component.css
+++ b/src/app/app/categories/a-category/a-category.component.css
@@ -37,3 +37,9 @@ img {
     color: white;
     ; }
 
+
+.scaleHey:hover {
+    transform: scale(1.05);
+}
+
+.scaleHey { transition: all .2s ease-in-out; }
