--- a/src/app/app/budgets/a-budget/a-budget.component.html
+++ b/src/app/app/budgets/a-budget/a-budget.component.html
@@ -1,5 +1,5 @@
 <div (drop)="heyDrop($event,budget.id)" (dragover)="allowDrop($event,budgetItemInput.id)" draggable="true" (dragstart)="dragStartHey($event,budgetItemInput.id)" (dragleave)="dragLeaveHey($event)" (dragend)="dragEndHey($event)" (dragenter)="dragEnterHey($event)">
-  <div class="d-flex flex-wrap "> 
+  <div class="d-flex flex-wrap scaleHey "> 
     <div [ngClass]="cardClasses()"  style="width: 9rem;">
       <div *ngIf='isEdit' class="text-right mt-2 mr-2">
         <i  routerLink="/budget/edit/{{budget.id}}" class="fa fa-pencil " 
