--- a/src/app/app/dashboard/dashboard.component.html
+++ b/src/app/app/dashboard/dashboard.component.html
@@ -14,10 +14,10 @@
      <i (click)='closeHint()' class=" pointer fa fa-times" aria-hidden="true"></i>
 </div>
 
-<h1 class='ml-3'>Категории расходов</h1> <hr>
+<h1 class='ml-3 mb-4'>Категории расходов</h1> <hr>
 <app-m-categories [isEdit]=false></app-m-categories>
 
-<div *ngIf='isFirstLoggedIn' class="ml-4 hint mb-4">
+<div *ngIf='isFirstLoggedIn' class="ml-4 hint mb-6">
         <div>
             <i class="fa fa-arrow-up fa-2x" aria-hidden="true"></i>
             <h1>Подсказка!</h1>
